# linc-python

./: .gitignore  pyproject.toml
linc/: cli.py  convertion.py  core.py  models.py  reader.py  utils.py
linc/config/: config.py  model.py  models.py  read.py
linc/parse/: dataset.py  file.py  header.py
linc/write/: common.py  types.py  writer_nc.py
tests/: conftest.py  test_config_reader.py  test_convert_to physical_units.py  test_convert_to_physical_units.py  test_parse_dataset.py  test_parse_header.py  test_reader.py  test_utils.py  test_writer_nc.py  test_writer_nc_legacy.py  test_writer_nc_mhc.py
tests/data/: lidar-config.toml  lmn-config.toml
tests/data/2022/07/14/: RS2271411.481095  RS2271411.484073  RS2271411.491048  RS2271411.494026  RS2271411.501002  RS2271411.503979  RS2271411.510955  RS2271411.513932  RS2271411.520909  RS2271411.523896  RS2271411.530906  RS2271411.533916  RS2271411.540926  RS2271411.543936  RS2271411.550946  RS2271411.553955  RS2271411.560966  RS2271411.563977  RS2271411.570988  RS2271412.303497  RS2271412.310507  RS2271412.340006  RS2271412.343015  RS2271412.350025  RS2271412.353035  RS2271412.360045  RS2271412.363054  RS2271412.370064  RS2271412.373074  RS2271412.380084  RS2271412.383094  RS2271412.390104  RS2271412.393113  RS2271412.400123  RS2271412.403133  RS2271412.410143  RS2271412.413153  RS2271412.420163  RS2271412.423173  RS2271412.430182  (+8 more)
tests/data/2022/08/08/: RM2280811.311971  RM2280811.321872  RM2280811.331768  RM2280811.341668  RM2280811.351568  RM2280811.361478  RM2280811.371371  RM2280811.381270  RM2280811.391181  (+1018 more)
