[tool.poetry]
name = "linc"
version = "0.1.0"
description = "A package to handle LICEL Binary format"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
typer = {extras = ["all"], version = "^0.6.1"}
numpy = "^1.23.4"
netCDF4 = "^1.6.1"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
xarray = "^2022.10.0"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
